--- a/locales/ja/index.json
+++ b/locales/ja/index.json
@@ -7,7 +7,7 @@
     "bannerTextRough": "発揮しよう",
     "bannerTextThree": "-集中に特化したチーム専用の空間-",
     "bannerTextTwo": "最大限のパフォーマンスを",
-    "googleText": "Google で サインインする",
+    "googleText": "Google で サインイン",
     "startText": "すべて 無料 でスタートする"
   },
   "faq": {
