--- a/locales/ja/index.json
+++ b/locales/ja/index.json
@@ -10,6 +10,9 @@
     "googleText": "Google で サインイン",
     "startText": "すべて 無料 でスタートする"
   },
+  "explore": {
+    "title": "セントレイウェイを探索する"
+  },
   "faq": {
     "bodyOne": "はい、それは誰にとっても無制限の時間を伴います-ワークスペースで同時に3人がいなければ。その場合は、独立したワークスペースを無料で作成するか（最大3人をサポート）、Proバージョンにアップグレードする必要があります。",
     "bodyThree": "市場での主要な競合他社は、常に同時に通信するという事実を前提としているため、仮想ワークスペースの真のニーズを再現することはほとんどできません。それは私たちが助けるためにここにいるところです.",
