feat: 🎸 complete refactor header i18n & pricing

--- a/locales/en/header.json
+++ b/locales/en/header.json
@@ -19,7 +19,7 @@
     "product": "Product",
     "resources": "Resources",
     "signup": "Sign Up For Free",
-    "support": "Support"
+    "pricing": "Pricing"
   },
   "product": {
     "demo": {
