--- a/locales/ja/index.json
+++ b/locales/ja/index.json
@@ -53,11 +53,6 @@
     "topTitleThree": "仕事に集中しよう",
     "topTitleTwo": "仲間と一緒に"
   },
-  "screen": {
-    "labelOne": "繋がる",
-    "labelThree": "作業",
-    "labelTwo": "集中"
-  },
   "slider": {
     "titleOne": "これらのチームの人々はSentreiを日々 ",
     "titleThree": " しております",
@@ -77,5 +72,10 @@
     "titleOne": "素晴らしい製品",
     "titleThree": "A Great Product",
     "titleTwo": "A Great Product"
+  },
+  "timeline": {
+    "bond": "繋がる",
+    "focus": "集中",
+    "work": "作業"
   }
 }
