--- a/locales/ja/header.json
+++ b/locales/ja/header.json
@@ -16,10 +16,10 @@
   "header": {
     "company": "会社",
     "login": "Log In",
+    "pricing": "価格・プラン",
     "product": "製品",
     "resources": "リソース",
-    "signup": "Sign Up",
-    "support": "サポート"
+    "signup": "Sign Up"
   },
   "product": {
     "demo": {
@@ -32,7 +32,7 @@
     },
     "pricing": {
       "description": "価格表をご覧ください",
-      "title": "価格設定"
+      "title": "価格・プラン"
     }
   },
   "resources": {
