--- a/locales/ja/header.json
+++ b/locales/ja/header.json
@@ -2,7 +2,7 @@
   "company": {
     "about": {
       "description": "私たちは誰ですか",
-      "title": "約"
+      "title": "我々について"
     },
     "analytics": {
       "description": "当社製品のオープン分析",
@@ -14,12 +14,14 @@
     }
   },
   "header": {
+    "about": "我々について",
     "company": "会社",
     "login": "Log In",
     "pricing": "価格・プラン",
     "product": "製品",
     "resources": "リソース",
-    "signup": "Sign Up"
+    "signup": "Sign Up",
+    "support": "サポート"
   },
   "product": {
     "demo": {
@@ -38,7 +40,7 @@
   "resources": {
     "pioneer": {
       "description": "私たちのオープンジャーナル",
-      "title": "開拓者"
+      "title": "Pioneer Journal"
     },
     "releases": {
       "description": "製品リリースログ",
