--- a/locales/ja/common.json
+++ b/locales/ja/common.json
@@ -1,7 +1,7 @@
 {
   "common": {
     "activity": "アクティビティ",
-    "analytics": "分析",
+    "analytics": "アナリティクス",
     "app": "アプリ",
     "avatar": "アバター",
     "back": "バック",
