--- a/locales/ja/footer.json
+++ b/locales/ja/footer.json
@@ -1,14 +1,14 @@
 {
   "footer": {
     "about": "会社について",
-    "analytics": "分析",
+    "analytics": "アナリティクス",
     "company": "会社",
     "cookies": "クッキー",
     "demo": "デモ",
     "legal": "法律関係",
     "media": "メディア",
     "mission": "ミッション",
-    "pioneer": "開拓者",
+    "pioneer": "Pioneer",
     "pitch": "ピッチ",
     "preferences": "環境設定",
     "pricing": "価格",
