--- a/locales/ja/index.json
+++ b/locales/ja/index.json
@@ -5,13 +5,13 @@
     "bannerHeaderTwo": "没頭",
     "bannerTextOne": "バーチャル・ワークスペースで",
     "bannerTextRough": "発揮しよう",
-    "bannerTextThree": "-集中に特化したチーム専用の空間-",
+    "bannerTextThree": "-テレワークの「見える化」-",
     "bannerTextTwo": "最大限のパフォーマンスを",
     "googleText": "Google で サインイン",
     "startText": "すべて 無料 でスタートする"
   },
   "explore": {
-    "title": "セントレイウェイを探索する"
+    "title": "Sentreiを発見する"
   },
   "faq": {
     "bodyOne": "はい、それは誰にとっても無制限の時間を伴います-ワークスペースで同時に3人がいなければ。その場合は、独立したワークスペースを無料で作成するか（最大3人をサポート）、Proバージョンにアップグレードする必要があります。",
@@ -25,7 +25,7 @@
   "feature": {
     "sectionTitle": "特徴",
     "subTitleOne": "誰もがいつでも好きなときにワークスペースにアクセスできます",
-    "subTitleThree": "個人の目標を達成するために仮想ワークスペースに費やされた毎日のパフォーマンスの分析を可能に",
+    "subTitleThree": "個人の目標を達成するために仮想ワークスペースに費やされた毎日のパフォーマンスのアナリティクスを可能に",
     "subTitleTwo": "簡単に気が散らないように、フォーカス指向の機能を提供します",
     "titleOne": "無制限の時間",
     "titleThree": "目標を達成",
@@ -33,16 +33,16 @@
   },
   "outline": {
     "problem": {
-      "one": "それは",
-      "rough": "ハード",
-      "two": "リモートワークで何が起こっているかを確認します。"
+      "one": "テレワークの",
+      "rough": "「見える化」",
+      "two": " "
     },
-    "solution": "私たちはそれを変えることができると思います。"
+    "solution": "私たちはそれを実現します。"
   },
   "product": {
-    "bottomSubTitle": "当社のデータ分析チームは、ワークスペースでの全員のプレゼンスを追跡し、チームの生産性と効率のためのリアルタイムのインサイトを可能にします",
+    "bottomSubTitle": "当社のデータアナリティクスチームは、ワークスペースでの全員のプレゼンスを追跡し、チームの生産性と効率のためのリアルタイムのインサイトを可能にします",
     "bottomTitleOne": " ",
-    "bottomTitleThree": "分析とデータ",
+    "bottomTitleThree": "アナリティクスとデータ",
     "bottomTitleTwo": "洞察に満ちた",
     "centerSubTitle": "時間単位のビデオ会議アプリにうんざりしていませんか？私たちの仮想ワークスペースは常にどこからでもアクセスできます-物理世界と同じように",
     "centerTitleOne": " ",
