--- a/locales/ja/space.json
+++ b/locales/ja/space.json
@@ -4,7 +4,7 @@
   },
   "analytics": {
     "none": "セッションがありません...",
-    "title": "分析"
+    "title": "アナリティクス"
   },
   "billing": {
     "alert": "プロプランにアップグレードしましょう！ いつでもキャンセル可能、2週間の無料トライアルが含まれています",
