--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -1,7 +1,7 @@
 {
   "common": {
     "activity": "活动",
-    "analytics": "分析工具",
+    "analytics": "アナリティクス工具",
     "app": "应用程式",
     "avatar": "头像",
     "back": "背部",
