--- a/locales/zh/header.json
+++ b/locales/zh/header.json
@@ -5,8 +5,8 @@
       "title": "关于"
     },
     "analytics": {
-      "description": "我们产品的开放分析",
-      "title": "分析工具"
+      "description": "我们产品的开放アナリティクス",
+      "title": "アナリティクス工具"
     },
     "media": {
       "description": "媒体资源",
