--- a/locales/zh/space.json
+++ b/locales/zh/space.json
@@ -4,7 +4,7 @@
   },
   "analytics": {
     "none": "您没有会话...",
-    "title": "分析工具"
+    "title": "アナリティクス工具"
   },
   "billing": {
     "alert": "立即升级到专业版计划！\n随时取消，包括2周的免费试用期",
