--- a/locales/ja/header.json
+++ b/locales/ja/header.json
@@ -35,6 +35,10 @@
     "pricing": {
       "description": "価格表をご覧ください",
       "title": "価格・プラン"
+    },
+    "support": {
+      "description": "Sentreiサポートにお問い合わせ",
+      "title": "サポート"
     }
   },
   "resources": {
