--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -17,7 +17,7 @@
     "title": "Do great work with Sentrei"
   },
   "explore": {
-    "title": "EXPLORE THE SENTREI WAY"
+    "title": "Explore the Sentrei Way"
   },
   "faq": {
     "bodyOne": "Yes, it comes with unlimited time for anyone - as long as you don't have simultaneously three people on the workspace. In that case, you will have to create a seperate workspace for free (which supports up to 3 people) or upgrade to the Pro version.",
