perf: ⚡️ ini caption i18n for landing ctta

--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -11,6 +11,7 @@
     "startText": "Get Started Now (Beta)"
   },
   "cta": {
+    "caption": "Start your Sentrei Journey",
     "salesText": "Contact Sales",
     "startText": "Start Now for Free",
     "subtitle": "Work smarter, faster and together now.",
