feat: 🎸 ini landing tagline for bond section

--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -10,6 +10,9 @@
     "googleText": "Sign up with Google",
     "startText": "Get Started Now (Beta)"
   },
+  "bond": {
+    "tagline": "True connection for your team"
+  },
   "cta": {
     "caption": "Start your Sentrei Journey",
     "salesText": "Contact Sales",
