--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -42,7 +42,7 @@
     "titleTwo": "Focus Oriented"
   },
   "focus": {
-    "tagline": "Accelerate your productivity"
+    "tagline": "Accelerate team productivity"
   },
   "outline": {
     "problem": {
