perf: ⚡️ refactor i18n landing for tagline

--- a/locales/ja/footer.json
+++ b/locales/ja/footer.json
@@ -1,6 +1,6 @@
 {
   "footer": {
-    "about": "会社について",
+    "about": "会社概要",
     "analytics": "アナリティクス",
     "company": "会社",
     "cookies": "クッキー",
