--- a/locales/ja/seo.json
+++ b/locales/ja/seo.json
@@ -1,7 +1,7 @@
 {
   "landing": {
     "404": "404お探しのページが見つかりませんでした",
-    "about": "会社について",
+    "about": "会社概要",
     "analytics": "アナリティクス",
     "credits": "ありがとうございます",
     "demo": "デモ",
