perf: ⚡️ ini substack for footer & header

--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -20,6 +20,7 @@
     "sentrei": "We help teams do great work.",
     "social": "Social",
     "specialThanks": "Special thanks to our families, friends, and everyone who have made the journey possible",
+    "substack": "Substack",
     "support": "Support",
     "team": "Team",
     "terms": "Terms and Conditions",
