perf: ⚡️ ini substack i18n

--- a/locales/ja/footer.json
+++ b/locales/ja/footer.json
@@ -20,6 +20,7 @@
     "sentrei": "私たちは人々が素晴らしい仕事をするのを助けるためにここにいます。",
     "social": "SNS",
     "specialThanks": "家族、友人、そしてこの瞬間を可能にしてくれたすべての人に感謝します",
+    "substack": "サブスタック",
     "support": "サポート",
     "team": "チーム",
     "terms": "利用規約",
