--- a/locales/zh/footer.json
+++ b/locales/zh/footer.json
@@ -20,6 +20,7 @@
     "sentrei": "我们在这里帮助人们做得很好。",
     "social": "社会的",
     "specialThanks": "特别感谢我们的家人，朋友和所有使旅程成为可能的人",
+    "substack": "子堆栈",
     "support": "支持",
     "team": "球队",
     "terms": "条款和条件",
