feat: 🎸 ini sales type for paper cups window

--- a/locales/en/papercups.json
+++ b/locales/en/papercups.json
@@ -2,6 +2,7 @@
   "papercups": {
     "greeting": "Hi there! How can I help you?",
     "messagePlaceholder": "Start typing...",
+    "sales": "Welcome to Sentrei Sales!",
     "subTitle": "Ask us anything in the chat window below 😊",
     "support": "Welcome to Sentrei Support!",
     "title": "Welcome to Sentrei!"
