--- a/locales/zh/papercups.json
+++ b/locales/zh/papercups.json
@@ -2,6 +2,7 @@
   "papercups": {
     "greeting": "嗨，您好！\n我怎么帮你？",
     "messagePlaceholder": "开始输入...",
+    "sales": "欢迎来到Sentrei销售！",
     "subTitle": "在below下面的聊天窗口中问我们任何问题",
     "support": "欢迎来到Sentrei支持！",
     "title": "欢迎来到森特雷！"
