--- a/locales/ja/papercups.json
+++ b/locales/ja/papercups.json
@@ -2,6 +2,7 @@
   "papercups": {
     "greeting": "こんにちは！\nどんな御用でしょうか？",
     "messagePlaceholder": "入力を開始...",
+    "sales": "セントレイセールスへようこそ！",
     "subTitle": "下のチャットウィンドウで質問してください😊",
     "support": "Sentrei Supportへようこそ！",
     "title": "セントレイへようこそ！"
