perf: ⚡️ ini sales i18n

--- a/locales/en/seo.json
+++ b/locales/en/seo.json
@@ -13,6 +13,7 @@
     "pricing": "Pricing",
     "privacy": "Privacy Policy",
     "reset-password": "Reset Password",
+    "sales": "Sales",
     "signup": "Signup",
     "support": "Support",
     "terms": "Terms and Conditions"
