--- a/locales/ja/seo.json
+++ b/locales/ja/seo.json
@@ -13,6 +13,7 @@
     "pricing": "価格",
     "privacy": "個人情報保護方針",
     "reset-password": "パスワード再設定",
+    "sales": "販売",
     "signup": "サインアップ",
     "support": "サポート",
     "terms": "規約と条件"
