--- a/locales/zh/seo.json
+++ b/locales/zh/seo.json
@@ -13,6 +13,7 @@
     "pricing": "价钱",
     "privacy": "隐私政策",
     "reset-password": "重设密码",
+    "sales": "营业额",
     "signup": "注册",
     "support": "支持",
     "terms": "条款和条件"
