chore: 🤖 update pioneer & sus week

--- a/packages/pioneer/src/sus/2020/18.md
+++ b/packages/pioneer/src/sus/2020/18.md
@@ -1,4 +1,4 @@
-# Weekly Update | Sep 21–Sep 27, 2020
+# Weekly Update | Sep 28–Oct 4, 2020
 
 ## Launch
 
@@ -14,7 +14,7 @@ Yes
 
 ### What have you learned from them?
 
-🦄 Completely revamp landing page & marketing & pitch
+🦄 Talk to More Users!
 
 ## Primary Metric
 
@@ -38,9 +38,9 @@ SMB (Small/Medium Business)
 
 ### What most improved your primary metric?
 
-1. 🌈 WAU: 1
-2. 🚀 Version v1.97.0
-3. 🚗 Github Stars 6
+1. 🌈 WAU: 3
+2. 🚀 Version v1.109.2
+3. 🚗 Github Stars 7
 
 ### Biggest obstacle?
 
