--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -4,7 +4,7 @@
     "bannerHeaderThree": "Work.",
     "bannerHeaderTwo": "Focus.",
     "bannerTextOne": "A dedicated virtual workspace for teams",
-    "bannerTextRough": "see what's happening",
+    "bannerTextRough": "see what's happening in remote work",
     "bannerTextThree": "- The workspace visualization platform -",
     "bannerTextTwo": "that helps you",
     "googleText": "Sign up with Google",
