--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -3,7 +3,7 @@
     "bannerHeaderOne": "Bond.",
     "bannerHeaderThree": "Work.",
     "bannerHeaderTwo": "Focus.",
-    "bannerTextOne": "A dedicated virtual workspace for teams",
+    "bannerTextOne": "A virtual workspace for teams",
     "bannerTextRough": "see what's happening in remote work",
     "bannerTextThree": "- The workspace visualization platform -",
     "bannerTextTwo": "that helps you",
